--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 __pycache__/
-/images/*/*
-!/images/*/.gitkeep
-/processed/*
-!/processed/.gitkeep
+/verbosetribble/images/*/*
+!/verbosetribble/images/*/.gitkeep
+/verbosetribble/processed/*
+!/verbosetribble/processed/.gitkeep
